--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.1.2",
     "express-session": "^1.11.3",
     "gulp-nodemon": "^2.0.3",
+    "moment": "^2.10.6",
     "mongoose": "^4.1.1",
     "oauth2orize": "^1.0.1",
     "passport": "^0.2.2",
